# sweeprs-web

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
src/: handler.rs  main.rs
ui/: package.json  pnpm-lock.yaml  tsconfig.json
ui/.husky/: pre-commit
ui/src/lib/: util.ts  wsStore.ts
ui/src/routes/: index.svelte  play.svelte
