[package]
name = "sweeprs-web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sweeprs = "0.2.0"

dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"

futures = "0.3.17"
futures-channel = "0.3.17"
futures-util = "0.3.17"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.15.0", features = ["rustls"] }
